; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/tui/extr_tui-win.c_tui_scroll_right_command.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/tui/extr_tui-win.c_tui_scroll_right_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tui_win_info = type { i32 }

@RIGHT_SCROLL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @tui_scroll_right_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tui_scroll_right_command(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.tui_win_info*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = call i32 (...) @tui_enable()
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @parse_scrolling_args(i8* %8, %struct.tui_win_info** %6, i32* %5)
  %10 = load i32, i32* @RIGHT_SCROLL, align 4
  %11 = load %struct.tui_win_info*, %struct.tui_win_info** %6, align 8
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @tui_scroll(i32 %10, %struct.tui_win_info* %11, i32 %12)
  ret void
}

declare dso_local i32 @tui_enable(...) #1

declare dso_local i32 @parse_scrolling_args(i8*, %struct.tui_win_info**, i32*) #1

declare dso_local i32 @tui_scroll(i32, %struct.tui_win_info*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
